@@ -20,9 +20,9 @@
 
 package org.bbreak.excella.reports.tag;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
+import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Calendar;
@@ -31,11 +31,14 @@ import org.apache.poi.ss.usermodel.Sheet;
 import org.apache.poi.ss.usermodel.Workbook;
 import org.bbreak.excella.core.exception.ParseException;
 import org.bbreak.excella.reports.ReportsTestUtil;
+import org.bbreak.excella.reports.WorkbookTest;
 import org.bbreak.excella.reports.model.ParamInfo;
 import org.bbreak.excella.reports.processor.ReportsCheckException;
 import org.bbreak.excella.reports.processor.ReportsParserInfo;
 import org.bbreak.excella.reports.processor.ReportsWorkbookTest;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 
 /**
  * {@link org.bbreak.excella.reports.tag.SingleParamParser} のためのテスト・クラス。
@@ -45,25 +48,22 @@ import org.junit.Test;
 public class SingleParamParserTest extends ReportsWorkbookTest {
 
     /**
-     * コンストラクタ
+     * {@link org.bbreak.excella.reports.tag.SingleParamParser#parse(org.apache.poi.ss.usermodel.Sheet, org.apache.poi.ss.usermodel.Cell, java.lang.Object)}
+     * のためのテスト・メソッド。
      * 
-     * @param version バージョン
+     * @throws ParseException
+     * @throws ReportsCheckException
+     * @throws IOException
      */
-    public SingleParamParserTest( String version) {
-        super( version);
-    }
-
-    /**
-     * {@link org.bbreak.excella.reports.tag.SingleParamParser#parse(org.apache.poi.ss.usermodel.Sheet, org.apache.poi.ss.usermodel.Cell, java.lang.Object)} のためのテスト・メソッド。
-     */
-    @Test
-    public void testParseSheetCellObject() {
+    @ParameterizedTest
+    @CsvSource( WorkbookTest.VERSIONS)
+    public void testParseSheetCellObject( String version) throws ParseException, ReportsCheckException, IOException {
 
         // -----------------------
         // □[正常系]通常解析
         // -----------------------
 
-        Workbook workbook = getWorkbook();
+        Workbook workbook = getWorkbook( version);
 
         Sheet sheet1 = workbook.getSheetAt( 0);
 
@@ -76,27 +76,27 @@ public class SingleParamParserTest extends ReportsWorkbookTest {
         // byte
         info.addParam( SingleParamParser.DEFAULT_TAG, "test01", ( byte) 1);
         // Byte
-        info.addParam( SingleParamParser.DEFAULT_TAG, "test02", new Byte( "1"));
+        info.addParam( SingleParamParser.DEFAULT_TAG, "test02", Byte.valueOf( "1"));
         // short
         info.addParam( SingleParamParser.DEFAULT_TAG, "test03", ( short) 2);
         // Short
-        info.addParam( SingleParamParser.DEFAULT_TAG, "test04", new Short( "2"));
+        info.addParam( SingleParamParser.DEFAULT_TAG, "test04", Short.valueOf( "2"));
         // int
         info.addParam( SingleParamParser.DEFAULT_TAG, "test05", 3);
         // Integer
-        info.addParam( SingleParamParser.DEFAULT_TAG, "test06", new Integer( "3"));
+        info.addParam( SingleParamParser.DEFAULT_TAG, "test06", Integer.valueOf( "3"));
         // long
         info.addParam( SingleParamParser.DEFAULT_TAG, "test07", 4L);
         // Long
-        info.addParam( SingleParamParser.DEFAULT_TAG, "test08", new Long( "4"));
+        info.addParam( SingleParamParser.DEFAULT_TAG, "test08", Long.valueOf( "4"));
         // float
         info.addParam( SingleParamParser.DEFAULT_TAG, "test09", 5.1f);
         // Float
-        info.addParam( SingleParamParser.DEFAULT_TAG, "test10", new Float( "5.1"));
+        info.addParam( SingleParamParser.DEFAULT_TAG, "test10", Float.valueOf( "5.1"));
         // double
         info.addParam( SingleParamParser.DEFAULT_TAG, "test11", 6.1);
         // Double
-        info.addParam( SingleParamParser.DEFAULT_TAG, "test12", new Double( 6.1));
+        info.addParam( SingleParamParser.DEFAULT_TAG, "test12", Double.valueOf( 6.1));
         // BigInteger
         info.addParam( SingleParamParser.DEFAULT_TAG, "test13", new BigInteger( "7"));
         // BigDecimal
@@ -114,45 +114,37 @@ public class SingleParamParserTest extends ReportsWorkbookTest {
         reportsParserInfo.setParamInfo( info);
 
         // 解析処理
-        try {
-            parseSheet( parser, sheet1, reportsParserInfo);
-        } catch ( ParseException e) {
-            fail( e.toString());
-        }
+        parseSheet( parser, sheet1, reportsParserInfo);
 
         // 期待値ブックの読み込み
-        Workbook expectedWorkbook = getExpectedWorkbook();
+        Workbook expectedWorkbook = getExpectedWorkbook( version);
         Sheet expectedSheet = expectedWorkbook.getSheet( "Sheet1");
 
-        try {
-            // チェック
-            ReportsTestUtil.checkSheet( expectedSheet, sheet1, false);
-        } catch ( ReportsCheckException e) {
-            fail( e.getCheckMessagesToString());
-        }
+        // チェック
+        ReportsTestUtil.checkSheet( expectedSheet, sheet1, false);
 
         // -----------------------
         // □[正常系]タグ名の変更
         // -----------------------
 
-        workbook = getWorkbook();
+        workbook = getWorkbook( version);
 
         // テストデータ
         ParamInfo infoP = new ParamInfo();
         infoP.addParam( "$P", "test", "test!");
         infoP.addParam( "$P", "テスト", "テストです!");
         infoP.addParam( "$P", "test01", ( byte) 1);
-        infoP.addParam( "$P", "test02", new Byte( "1"));
+        infoP.addParam( "$P", "test02", Byte.valueOf( "1"));
         infoP.addParam( "$P", "test03", ( short) 2);
-        infoP.addParam( "$P", "test04", new Short( "2"));
+        infoP.addParam( "$P", "test04", Short.valueOf( "2"));
         infoP.addParam( "$P", "test05", 3);
-        infoP.addParam( "$P", "test06", new Integer( "3"));
+        infoP.addParam( "$P", "test06", Integer.valueOf( "3"));
         infoP.addParam( "$P", "test07", 4L);
-        infoP.addParam( "$P", "test08", new Long( "4"));
+        infoP.addParam( "$P", "test08", Long.valueOf( "4"));
         infoP.addParam( "$P", "test09", 5.1f);
-        infoP.addParam( "$P", "test10", new Float( "5.1"));
+        infoP.addParam( "$P", "test10", Float.valueOf( "5.1"));
         infoP.addParam( "$P", "test11", 6.1);
-        infoP.addParam( "$P", "test12", new Double( 6.1));
+        infoP.addParam( "$P", "test12", Double.valueOf( 6.1));
         infoP.addParam( "$P", "test13", new BigInteger( "7"));
         infoP.addParam( "$P", "test14", new BigDecimal( "8.5"));
         cal.clear();
@@ -168,22 +160,14 @@ public class SingleParamParserTest extends ReportsWorkbookTest {
         Sheet sheet2 = workbook.getSheetAt( 1);
 
         // 解析処理
-        try {
-            parseSheet( parser, sheet2, reportsParserInfo);
-        } catch ( ParseException e) {
-            fail( e.toString());
-        }
+        parseSheet( parser, sheet2, reportsParserInfo);
 
         // 期待値ブックの読み込み
-        expectedWorkbook = getExpectedWorkbook();
+        expectedWorkbook = getExpectedWorkbook( version);
         expectedSheet = expectedWorkbook.getSheet( "Sheet2");
 
-        try {
-            // チェック
-            ReportsTestUtil.checkSheet( expectedSheet, sheet2, false);
-        } catch ( ReportsCheckException e) {
-            fail( e.getCheckMessagesToString());
-        }
+        // チェック
+        ReportsTestUtil.checkSheet( expectedSheet, sheet2, false);
 
         // セッターによるタグ名セット
         parser = new SingleParamParser();
@@ -192,23 +176,15 @@ public class SingleParamParserTest extends ReportsWorkbookTest {
         sheet2 = workbook.getSheetAt( 1);
 
         // 解析処理
-        try {
-            parseSheet( parser, sheet2/** sheet1 */
+        parseSheet( parser, sheet2/** sheet1 */
             , reportsParserInfo);
-        } catch ( ParseException e) {
-            fail( e.toString());
-        }
 
         // 期待値ブックの読み込み
-        expectedWorkbook = getExpectedWorkbook();
+        expectedWorkbook = getExpectedWorkbook( version);
         expectedSheet = expectedWorkbook.getSheet( "Sheet2");
 
-        try {
-            // チェック
-            ReportsTestUtil.checkSheet( expectedSheet, sheet2, false);
-        } catch ( ReportsCheckException e) {
-            fail( e.getCheckMessagesToString());
-        }
+        // チェック
+        ReportsTestUtil.checkSheet( expectedSheet, sheet2, false);
 
         // -----------------------
         // □[正常系]必須パラメータがない場合
@@ -218,21 +194,14 @@ public class SingleParamParserTest extends ReportsWorkbookTest {
         Sheet sheet3 = workbook.getSheetAt( 2);
 
         // 解析処理
-        try {
-            parseSheet( parser, sheet3, reportsParserInfo);
-        } catch ( ParseException e) {
+        parseSheet( parser, sheet3, reportsParserInfo);
 
-        }
         // 期待値ブックの読み込み
-        expectedWorkbook = getExpectedWorkbook();
+        expectedWorkbook = getExpectedWorkbook( version);
         expectedSheet = expectedWorkbook.getSheet( "Sheet3");
 
-        try {
-            // チェック
-            ReportsTestUtil.checkSheet( expectedSheet, sheet3, false);
-        } catch ( ReportsCheckException e) {
-            fail( e.getCheckMessagesToString());
-        }
+        // チェック
+        ReportsTestUtil.checkSheet( expectedSheet, sheet3, false);
     }
 
     /**
